<resources>
    <string name="app_name">Weather</string>
    <string name="app_subtitle">Smart Weather Forecast</string>
    <string name="section_core_features">CORE FEATURES</string>
    <string name="select_language">Select Language</string>
    <string name="search_language">Search language…</string>
    <string name="card1_tag">Status</string>
    <string name="card1_title">Real-time Weather</string>
    <string name="card1_desc">Manage the weather list for favorite locations.</string>
    <string name="card1_stat1">14 km/h Wind</string>
    <string name="card1_stat2">68% Humidity</string>
    <string name="card1_stat3">UV 4</string>
    <string name="card2_tag">Rain &amp; Trends</string>
    <string name="card2_title">5-Day / 3-Hour Forecast</string>
    <string name="card2_desc">Check the weather using an intuitive map-based view..</string>
    <string name="card2_stat1">Monitoring</string>
    <string name="card2_stat2">Temp Trend</string>
    <string name="card2_stat3">Rain Probability</string>
    <string name="card3_tag">Global GPS</string>
    <string name="card3_title">Search &amp; Save Favorites</string>
    <string name="card3_desc">Quickly track the Air Quality Index (AQI).</string>
    <string name="card3_stat1">Global</string>
    <string name="card3_stat2">Auto GPS</string>
    <string name="card3_stat3">Multi-city</string>
    <string name="btn_start_now">Get Started</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_next">Next</string>
    <string name="btn_skip">Skip</string>
    <string name="footer_version">v1.0.0 • Open Source</string>
    <string name="page_counter_format">%1$d / %2$d</string>
    <string name="card4_tag">Alerts</string>
    <string name="card4_title">Smart Notifications</string>
    <string name="card4_desc">Accurate hourly weather and temperature updates.</string>
    <string name="card4_stat1">Rain Alert</string>
    <string name="card4_stat2">Storm Warning</string>
    <string name="card4_stat3">UV Alert</string>
    <string name="weather_setup_title">Weather Setup</string>
    <string name="weather_setup_subtitle">Select parameters to display on your Home screen</string>
    <string name="param_temperature">Temperature</string>
    <string name="param_temperature_desc">Current temperature, feels-like, and high/low range</string>
    <string name="param_humidity">Humidity</string>
    <string name="param_humidity_desc">Relative humidity percentage and dew point</string>
    <string name="param_wind">Wind</string>
    <string name="param_wind_desc">Wind speed and directional degrees</string>
    <string name="param_visibility">Visibility</string>
    <string name="param_visibility_desc">Visibility distance and clarity condition evaluation</string>
    <string name="param_pressure">Pressure</string>
    <string name="param_pressure_desc">Atmospheric pressure (hPa) and atm equivalent</string>
    <string name="param_air_quality">Air Quality</string>
    <string name="param_air_quality_desc">Air Quality Index (AQI) and health advisory level</string>
    <string name="param_cloud_cover">Cloud Cover</string>
    <string name="param_cloud_cover_desc">Cloudiness percentage and sky coverage condition</string>
    <string name="param_sun_cycle">Sun &amp; Daylight</string>
    <string name="param_sun_cycle_desc">Sunrise, sunset times, and daylight duration</string>
    <string name="home_title">Home</string>
    <string name="telemetry_section_title">Detailed Parameters</string>
    <string name="air_quality_title">Air Quality (AQI)</string>
    <string name="aqi_good">Good</string>
    <string name="aqi_fair">Fair</string>
    <string name="aqi_moderate">Moderate</string>
    <string name="aqi_poor">Poor</string>
    <string name="aqi_very_poor">Very Poor</string>
    <string name="aqi_good_desc">Air quality is satisfactory and poses little risk.</string>
    <string name="aqi_fair_desc">Air quality is acceptable for most individuals.</string>
    <string name="aqi_moderate_desc">Sensitive groups may experience mild symptoms.</string>
    <string name="aqi_poor_desc">May cause discomfort or health effects for sensitive groups.</string>
    <string name="aqi_very_poor_desc">Health alert: Everyone may experience serious effects.</string>
    <string name="cloud_cover_title">Cloud Cover</string>
    <string name="cloud_overcast">Overcast</string>
    <string name="cloud_mostly_cloudy">Mostly Cloudy</string>
    <string name="cloud_partly_cloudy">Partly Cloudy</string>
    <string name="cloud_mostly_clear">Mostly Clear</string>
    <string name="cloud_clear">Clear</string>
    <string name="settings_title">Settings</string>
    <string name="settings_language">Language</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_unit">Temperature Unit</string>
    <string name="settings_weather_setup">Customize Weather Widgets</string>
    <string name="city_management_title">City Management</string>
    <string name="current_location_title">Your Current Location</string>
    <string name="current_location_subtitle">Get real-time weather using device GPS</string>
    <string name="add_city_hint">Enter city name </string>
    <string name="suggested_cities">Suggested Cities</string>
    <string name="saved_cities">Saved Cities</string>
    <string name="hint_long_click_to_delete">Tap to view on Home • Long press to delete</string>
    <string name="delete_city_title">Delete City</string>
    <string name="delete_city_confirm">Are you sure you want to delete \"%1$s\" from your list?</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="city_already_exists">City is already in your list</string>
    <string name="city_added_success">Added %1$s</string>
    <string name="city_deleted_success">Deleted %1$s</string>
    <string name="cannot_delete_last_city">Cannot delete the only city left</string>
    <string name="feels_like">Feels like %1$d%2$s</string>
    <string name="permission_location_title">Location Permission Required</string>
    <string name="permission_location_message">The app needs location access to provide accurate local weather.\n\nPlease tap \"Open Settings\" to grant permission.</string>
    <string name="btn_open_settings">Open Settings</string>
    <string name="btn_later">Later</string>
    <string name="gps_enable_title">Enable GPS</string>
    <string name="gps_enable_message">GPS on your device is turned off. Please enable GPS to automatically update weather at your current location.</string>
    <string name="btn_enable_gps">Enable GPS</string>
    <string name="weather_server_error">Could not connect to weather service for %1$s</string>
    <string name="last_updated_format">🕒 Updated at %1$s</string>
    <string name="temp_high_format">↑ High: %1$d°</string>
    <string name="temp_low_format">↓ Low: %1$d°</string>
    <string name="dew_point_format">Dew point: %1$d%2$s</string>
    <string name="wind_gust_format"> (gust %1$.1f m/s)</string>
    <string name="sunrise_label">Sunrise</string>
    <string name="sunset_label">Sunset</string>
    <string name="daylight_duration_label">Daylight\nDuration</string>
    <string name="pressure_detail_title">Detailed Pressure</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="today">Today</string>
    <string name="tomorrow_with_day">Tomorrow (%1$s)</string>
    <string name="loading">Loading…</string>
    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>
    <string name="sunday_short">Sun</string>
    <string name="five_day_list">5-Day List</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="dew_point">Dew point: 22°C</string>
    <string name="home">Home</string>
    <string name="forecast">Forecast</string>
    <string name="clear_sky">Clear sky</string>
    <string name="weather_now">Now</string>
    <string name="rain_chance">%1$d%% rain</string>
    <string name="weather_thunderstorm">Thunderstorm</string>
    <string name="weather_drizzle">Light drizzle</string>
    <string name="weather_light_rain">Light rain</string>
    <string name="weather_moderate_rain">Moderate rain</string>
    <string name="weather_heavy_rain">Heavy rain</string>
    <string name="weather_freezing_rain">Freezing rain</string>
    <string name="weather_shower_rain">Shower rain</string>
    <string name="weather_snow">Snow</string>
    <string name="weather_fog">Fog</string>
    <string name="weather_smoke">Smoke</string>
    <string name="weather_haze">Haze</string>
    <string name="weather_dust">Dust</string>
    <string name="weather_tornado">Tornado</string>
    <string name="weather_clear_sky">Clear sky</string>
    <string name="weather_few_clouds">Few clouds</string>
    <string name="weather_scattered_clouds">Scattered clouds</string>
    <string name="weather_broken_clouds">Broken clouds</string>
    <string name="weather_default">Stable weather</string>
    <string name="visibility_very_good">Very good visibility</string>
    <string name="visibility_clear">Clear</string>
    <string name="visibility_good">Good visibility</string>
    <string name="visibility_normal">Normal</string>
    <string name="visibility_moderate">Moderate visibility</string>
    <string name="visibility_hazy">Slightly hazy</string>
    <string name="visibility_limited">Limited visibility</string>
    <string name="visibility_foggy">Foggy</string>
    <string name="cloud_clear_sky">Clear sky</string>
    <string name="cloud_few_clouds_description">Few clouds, sunny</string>
    <string name="cloud_few_clouds">Few clouds</string>
    <string name="cloud_scattered_description">Scattered clouds</string>
    <string name="cloud_scattered_clouds">Scattered</string>
    <string name="pressure_stable">Stable pressure</string>
    <string name="cloud_many_description">Mostly cloudy</string>
    <string name="cloud_many">Cloudy</string>
    <string name="gust_calm">Gust: Calm</string>
    <string name="cloud_overcast_description">Overcast sky</string>
    <string name="choose_theme">Choose theme</string>
    <string name="theme_system">System</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="weather_widgets">Temperature, Humidity, Wind, Pressure...</string>
    <string name="app_version">App Version</string>
    <string name="app_version_info">SkyCast v1.0.0 • Open Source</string>
    <string name="information">Information</string>
    <string name="favourite">Favourite</string>
    <string name="favourite_title">Favourite</string>
    <string name="favourite_count">%1$d Saved</string>
    <string name="add_city">+ Add</string>
    <string name="search_favourite_hint">Search saved cities...</string>
    <string name="favourite_empty">No favourite cities found</string>
    <string name="favourite_empty_desc">Add cities from Home or Search to track weather here</string>
    <string name="city_added_to_favourite">%1$s added to favourites</string>
    <string name="CityWeather">CityWeather</string>
    <string name="favorite">Manage the list of favorite weather locations.</string>
    <string name="next">Next</string>
</resources>