<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:fontFamily="@font/plusjakartasans_bold"
        android:layout_marginTop="@dimen/_28sdp"
        android:gravity="center"
        android:text="@string/CityWeather"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="13dp" />

    <TextView
        android:id="@+id/tvIntroduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:fontFamily="@font/plusjakartasans_regular"
        android:gravity="center"
        android:maxLines="3"
        android:text="@string/favorite"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <ImageView
        android:id="@+id/ivIllustration"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:scaleType="fitCenter"
        android:src="@drawable/img"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/ivDotIndicator"
        app:layout_constraintTop_toBottomOf="@+id/tvIntroduction"
        app:layout_constraintVertical_bias="0.538"
        tools:layout_editor_absoluteX="-36dp" />

    <ImageView
        android:id="@+id/ivDotIndicator"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_150sdp"
        android:src="@drawable/ic_dot_onboarding_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:fontFamily="@font/plusjakartasans_bold"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/next"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="@+id/ivDotIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivDotIndicator" />

</androidx.constraintlayout.widget.ConstraintLayout>
